--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,77 +1,34 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
+}
+
+a {
+  text-decoration: none;
+}
+
+link:hover {
+  text-decoration: none;
 }
 
 nav {
   width: 100%;
   min-height: 70px;
   background: #fff;
-
-}
-
-.container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
-.container-fluid {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  /* box-shadow: 0 0 0 0.05rem rgba(0, 123, 255, 0.25); */
+  margin-bottom: 3rem;
 }
 
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 14px;
+  padding: 14px 0;
 
 }
 
 .left-nav a {
-  color: #FC7963;
+  color: #6C63FF;
   font-size: 24px;
+  font-weight: 600;
 }
 
 .right-nav {
@@ -84,45 +41,109 @@ nav {
   color: #636363;
 }
 
+
 .right-nav a:hover {
-  border-bottom: 1px solid #FC7963;
+  /* border-bottom: 1px solid #FC7963; */
+  border-bottom: 3px solid #0069d9;
+
 }
 
 form {
-  width: 50%;
+  width: 40%;
   margin: auto;
   border: 1px solid #c4c4c4;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 10px;
 }
+.form-group {
 
+}
 form h6 {
   color: #495057;
   font-size: 18px;
 }
-.form-group {
-  margin-bottom: 1rem;
+
+form button {
+  margin-top: 0.5rem!important;
 }
 
-.form-control {
-  display: block;
+/* SECTION ------------------------- */
+section {
+  min-height: 200px;
+  display: flex;
+  margin-top: 3rem;
+}
+
+.left-section {
+  text-align: left;
+  padding-top: 2rem;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: fit-content;
+}
+
+.left-section p {
+  font-size: 18px;
+
+}
+.left-section h1 {
+  font-size: 48px;
+
+}
+.right-section {
+  width: 50%;
+  height: 100%
+}
+
+.btn {
+  padding: 14px 16px;
+  min-width: 200px;
+  border-radius: 40px;
+  max-width: fit-content;
+  margin-top: 2rem;
+  font-size: 18px;
+  
+}
+.btn-primary {
+  background: #0069d9;
+}
+
+.btn-primary:hover {
+  background: #fff;
+  color: #0069d9;
+  border: 1px solid #0069d9;
+}
+.bg-blue {
+  background: #6C63FF;
+  min-height: 100px;
+}
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: white;
 }
 
-.form-control:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #80bdff;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+.glow {
+  font-size: 80px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0069d9, 0 0 40px #0069d9, 0 0 50px #0069d9, 0 0 60px #0069d9, 0 0 70px #0069d9;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #6C63FF, 0 0 40px #6C63FF, 0 0 50px #6C63FF, 0 0 60px #6C63FF, 0 0 70px #6C63FF, 0 0 80px #ff4da6;
+  }
 }
